@@ -1,5 +1,6 @@
 package com.algaworks.junit.ecommerce;
 
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -127,7 +128,7 @@ class CarrinhoCompraTest {
             @Test
             @DisplayName("E não deve remover demais itens")
             void naoDeveRemoverDemaisItens() {
-                assertEquals(desktop, carrinhoCompra.getItens().get(0).getProduto());
+                assertEquals(desktop, carrinhoCompra.getItens().getFirst().getProduto());
             }
         }
 
@@ -172,7 +173,7 @@ class CarrinhoCompraTest {
             @Test
             @DisplayName("Então deve remover item")
             void deveRemoverItem() {
-                assertNotEquals(carrinhoCompra.getItens().get(0).getProduto(), desktop);
+                assertNotEquals(carrinhoCompra.getItens().getFirst().getProduto(), desktop);
             }
         }
 
@@ -244,6 +245,15 @@ class CarrinhoCompraTest {
                 carrinhoCompra.adicionarProduto(notebook, 1);
                 carrinhoCompra.adicionarProduto(notebook, 1);
                 carrinhoCompra.adicionarProduto(desktop, 1);
+            }
+
+            @Test
+            @DisplayName("Então deve conter apenas produtos adicionados")
+            void entaoDeveConterApenasProdutosAdicionados() {
+                Assertions.assertThat(carrinhoCompra.getItens())
+                        .flatMap(ItemCarrinhoCompra::getProduto)
+                        .contains(notebook, desktop)
+                        .doesNotContain(tablet);
             }
 
             @Test
